<resources>
    <string name="app_name">My Application</string>

    <!-- Sign Up Activity -->
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="lets_get_started">Lets get started</string>

    <string name="first_slide">Choose Your Product</string>
    <string name="second_slide">Fast Delivery</string>
    <string name="third_slide">Great Services</string>

    <string name="description">Your best outfit store!</string>

    <string name="skip">Skip</string>
    <string name="todo">TODO</string>

</resources>