<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@drawable/designlogin2" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/sign_up"
        android:textColor="@color/text_heading"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/name"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:drawableLeft="@drawable/ic_baseline_person_24" />


    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/email"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:drawableLeft="@drawable/ic_baseline_account_circle" />


    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24" />

    <Button
        app:layout_constraintWidth_percent=".4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="signup"
        android:text="@string/sign_up"
        android:padding="15dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
         />


</androidx.constraintlayout.widget.ConstraintLayout>